feat(demo): gated COA/COD demo runner against the local broker
Closes #16

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>